--- a/angular.json
+++ b/angular.json
@@ -36,6 +36,12 @@
               "src/favicon.ico",
               "src/assets"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/scss" 
+              ]
+            },
+          
             "styles": [
               "src/styles.scss"
             ],
