--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:pnft": "node dist/pnft/server/server.mjs"
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "deploy": "ng build --prod --base-href /ваш-репозиторій/",
+    "predeploy": "npm run build"
   },
   "private": true,
   "dependencies": {
@@ -35,6 +37,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "angular-cli-ghpages": "^0.6.2",
     "gh-pages": "^6.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
@@ -43,15 +46,5 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.2.2"
-  },
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "deploy": "ng build --prod --base-href /ваш-репозиторій/",
-    "predeploy": "npm run build"
   }
 }
